tests/build/widget_new/missing_semi2.stderr
error: expected `=` or `;`
  --> $DIR/missing_semi2.rs:10:9
   |
10 |         draggable = true;
   |         ^^^^^^^^^

warning: unused import: `margin`
 --> $DIR/missing_semi2.rs:2:57
  |
2 | use zero_ui::properties::{cursor, drag_move::draggable, margin};
  |                                                         ^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default
